--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500|Roboto:300,400,500" rel="stylesheet">
   <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
+  <script src="https://use.fontawesome.com/1b12664dea.js"></script>
 
   <style>
     app-root > .background {
