--- a/standalone-creditcard/src/index.html
+++ b/standalone-creditcard/src/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h1> $COMPANY LOGO </h1>
-        <form action="#" id="form" name="credit-card-info">
+        <form action="javascript:void(0);" id="form" name="credit-card-info">
             <label class="text-label" for="name">Name on Card</label>
             <input type="text" name="name" id="name">
 
