--- a/src/pixel-js/index.html
+++ b/src/pixel-js/index.html
@@ -16,72 +16,75 @@
   </script>
 
   <script>
-    // when document is ready
-    document.addEventListener('DOMContentLoaded', function() {
-      // look for sixcrm-affiliate_id in url
+    function acquireToken(callback) {
+      // prepare http request
+      var currentTime = Date.now();
+      var generatedToken = ADD_KEY_HERE+':'+currentTime+':'+sha1(ADD_SECRET_HERE+currentTime);
+      var http = new XMLHttpRequest();
+      http.open('POST', ADD_ENDPOINT_HERE + 'token/acquire/' + ADD_ACCOUNT_ID_HERE, true);
+      http.setRequestHeader('Authorization', generatedToken);
+
+      http.onreadystatechange = function() {
+        if(http.readyState ===4 && http.status === 200) {
+          var acquiredToken = JSON.parse(http.responseText).response;
+          callback(acquiredToken);
+        }
+      };
+
+      // make http request
+      http.send('{"campaign":"' + ADD_CAMPAIGN_ID_HERE + '","affiliates":{"affiliate":"' + getAffiliateId() + '"}}');
+    }
+
+    function getAffiliateId() {
+      // look for affiliate_id in url params
       var urlAffiliate = new RegExp("[\\?&]affiliate_id=([^&#]*)").exec(location.href);
 
-      // look for sixcrm-affiliate_id in meta tags
+      // look for affiliate_id in meta tags
       var htmlAffiliate = document.head.querySelector("meta[name='affiliate_id']");
 
-      // look for sixcrm-affiliate_id in cookies
+      // look for affiliate_id in cookies
       var cookies = ("; " + document.cookie).split("; affiliate_id=");
       var cookieAffiliate = cookies.length === 2 ? cookies.pop().split(";").shift() : '';
 
       // set affiliate id
-      var selectedAffiliateId = urlAffiliate ? urlAffiliate[1] : htmlAffiliate ? htmlAffiliate.content : affiliateId ? affiliateId : cookieAffiliate;
+      var aId = urlAffiliate ? urlAffiliate[1] : htmlAffiliate ? htmlAffiliate.content : affiliateId ? affiliateId : cookieAffiliate;
 
       // set cookie with affiliate id
       var date = new Date();
       date.setTime(date.getTime() + 24*60*60*1000);
-      document.cookie = 'affiliate_id='+selectedAffiliateId+'; expires='+date.toUTCString()+'; path=/';
+      document.cookie = 'affiliate_id='+aId+'; expires='+date.toUTCString()+'; path=/';
 
-      function acquireToken(callback) {
-        // prepare http request
-        var currentTime = Date.now();
-        var generatedToken = ADD_KEY_HERE+':'+currentTime+':'+sha1(ADD_SECRET_HERE+currentTime);
-        var http = new XMLHttpRequest();
-        http.open('POST', ADD_ENDPOINT_HERE + 'token/acquire/' + ADD_ACCOUNT_ID_HERE, true);
-        http.setRequestHeader('Authorization', generatedToken);
+      return aId;
+    }
 
-        http.onreadystatechange = function() {
-          if(http.readyState ===4 && http.status === 200) {
-            var acquiredToken = JSON.parse(http.responseText).response;
-            callback(acquiredToken);
-          }
-        };
+    function getTrackers(token) {
+      // prepare http request
+      var http = new XMLHttpRequest();
+      http.open('POST', ADD_ENDPOINT_HERE + 'tracking/' + ADD_ACCOUNT_ID_HERE, true);
+      http.setRequestHeader('Authorization', token);
 
-        // make http request
-        http.send('{"campaign":"' + ADD_CAMPAIGN_ID_HERE + '","affiliates":{"affiliate":"' + selectedAffiliateId + '"}}');
-      }
+      http.onreadystatechange = function() {
+        if(http.readyState ===4 && http.status === 200) {
 
-      function getTrackers(token) {
-
-        // prepare http request
-        var http = new XMLHttpRequest();
-        http.open('POST', ADD_ENDPOINT_HERE + 'tracking/' + ADD_ACCOUNT_ID_HERE, true);
-        http.setRequestHeader('Authorization', token);
-
-        http.onreadystatechange = function() {
-          if(http.readyState ===4 && http.status === 200) {
-
-            // append each tracker to html body
-            var trackers = JSON.parse(http.responseText).response.trackers;
-            if (trackers && trackers.length > 0) {
-              var tracker;
-              for (var i = 0; i < trackers.length; i++) {
-                tracker = document.createElement('div');
-                tracker.innerHTML = trackers[i].body;
-                document.body.appendChild(tracker);
-              }
+          // append each tracker to html body
+          var trackers = JSON.parse(http.responseText).response.trackers;
+          if (trackers && trackers.length > 0) {
+            var tracker;
+            for (var i = 0; i < trackers.length; i++) {
+              tracker = document.createElement('div');
+              tracker.innerHTML = trackers[i].body;
+              document.body.appendChild(tracker);
             }
           }
-        };
+        }
+      };
 
-        // make http request
-        http.send('{"campaign":"' + ADD_CAMPAIGN_ID_HERE + '","affiliate_id":"' + selectedAffiliateId + '"}');
-      }
+      // make http request
+      http.send('{"campaign":"' + ADD_CAMPAIGN_ID_HERE + '","affiliate_id":"' + getAffiliateId() + '"}');
+    }
 
+    // when document is ready
+    document.addEventListener('DOMContentLoaded', function() {
       acquireToken(getTrackers);
     }, false);
   </script>
