Change loading screen

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 
   <style>
     app-root > .background {
-      background: -webkit-radial-gradient(#40404b, #111118) rgba(34,34,40,0.94);
-      background: radial-gradient(#40404b, #111118) rgba(34,34,40,0.94);
+      background: -webkit-radial-gradient(#0A38D9, #067BE9) rgba(34,34,40,0.94);
+      background: radial-gradient(#0A38D9, #067BE9) rgba(34,34,40,0.94);
       display: block;
       position: absolute;
       top: 0;
@@ -28,8 +28,9 @@
 
     app-root > .background > .wrapper {
       position: fixed;
-      top: 50%;
+      top: 40%;
       left: 50%;
+      margin-left: -40px;
       transform: translate(-50%, -50%);
       -webkit-transform: translate(-50%, -50%);
     }
@@ -42,8 +43,8 @@
     }
 
     .sixLogo {
-      width: 80px;
-      height: 80px;
+      width: 180px;
+      height: 180px;
       position: absolute;
       top: 0;
       left: 0;
@@ -80,7 +81,7 @@
     <div class="wrapper">
       <div class="spinner">
         <div class="sixLogo">
-          <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 75 75"><title>sixIcon</title><path d="M66,12.82A37.32,37.32,0,0,0,42.48,1.94h0L23,21.44A24.37,24.37,0,1,0,39.52,15H37.91l6.74-6.75a31.49,31.49,0,1,1-27.58,8.95L31.51,2.68A37.5,37.5,0,1,0,66,12.82ZM39.52,21a18.42,18.42,0,1,1-13.07,5.47h0l.75-.75A18.3,18.3,0,0,1,39.53,21Z" transform="translate(-1.98 -1.94)" style="fill:#0199cc"/></svg>
+          <svg width="100%" height="100%" viewBox="0 0 142 142" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;"><g id="mark"><circle id="oval" cx="71" cy="71" r="70" style="fill:none;stroke:#fff;stroke-opacity:0.298039;stroke-width:0.7px;"/><circle id="oval1" cx="71" cy="71" r="61.25" style="fill:none;stroke:#fff;stroke-opacity:0.498039;stroke-width:0.7px;"/><circle id="oval2" cx="71" cy="71" r="52.5" style="fill:none;stroke:#fff;stroke-width:0.7px;"/><path id="Shape" d="M100.699,41.185c-7.049,-7.079 -16.393,-11.401 -26.345,-12.185l-21.809,21.844c-9.666,8.922 -11.62,23.473 -4.652,34.637c6.968,11.164 20.884,15.778 33.126,10.982c12.242,-4.795 19.341,-17.64 16.899,-30.577c-2.442,-12.937 -13.734,-22.299 -26.879,-22.287l-1.808,0l7.55,-7.561c16.032,2.679 28.157,15.989 29.358,32.224c1.201,16.235 -8.835,31.189 -24.297,36.205c-15.463,5.017 -32.346,-1.203 -40.877,-15.06c-8.531,-13.857 -6.499,-31.759 4.919,-43.345l16.178,-16.236c-18.754,4.091 -32.354,20.396 -33.035,39.609c-0.682,19.213 11.727,36.444 30.144,41.858c18.417,5.415 38.156,-2.366 47.949,-18.9c9.794,-16.533 7.151,-37.614 -6.421,-51.208l0,0Zm-29.66,9.15c9.828,-0.011 18.298,6.927 20.237,16.578c1.939,9.65 -3.192,19.329 -12.259,23.127c-9.067,3.798 -19.55,0.659 -25.047,-7.501c-5.497,-8.16 -4.48,-19.072 2.43,-26.072l0.84,-0.842c3.791,-3.416 8.716,-5.296 13.815,-5.274l-0.016,-0.016l0,0Z" style="fill:#fff;fill-rule:nonzero;"/></g></svg>
         </div>
       </div>
     </div>
