Add http-equiv expires meta header to index.html to prevent caching of index.html

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
+  <meta http-equiv="expires" content="0">
   <link rel="icon" type="image/png" href="/assets/favicons/favicon-icon.png">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Roboto:300,400,500,600" rel="stylesheet">
