--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
   <style>
     app-root > .background {
-      background: linear-gradient(to bottom left, #4277C2, #2C98F0);
+      background: #296ccc;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -32,7 +32,7 @@
       height: 159px;
     }
 
-    .background > .wrapper > .spinner-wrapper {
+    .background > .wrapper > {
       position: absolute;
       z-index: 1;
     }
@@ -40,11 +40,80 @@
     .sixLogo {
       position: absolute;
       z-index: 2;
+      width: 150px;
+      height: 150px;
     }
 
-    .spinner-wrapper > .mat-spinner circle {
-      stroke: #1EB1FC;
+    .process-dialog-container {
+      display: flex;
     }
+
+    .symbol {
+      margin: auto;
+      width: 150px;
+      height: 150px;
+      animation: rotate 6s infinite linear;
+      fill: #99ccff;
+    }
+
+    .symbol1,
+    .symbol2,
+    .symbol3,
+    .symbol4,
+    .symbol5,
+    .symbol6 {
+      animation: scale 6s infinite ease-in-out;
+      transform-origin: center center;
+    }
+
+    .symbol1 {
+      animation-delay: 0s;
+    }
+    .symbol2 {
+      animation-delay: 0.25s;
+    }
+    .symbol3 {
+      animation-delay: 0.5s;
+    }
+    .symbol4 {
+      animation-delay: 0.75s;
+    }
+    .symbol5 {
+      animation-delay: 1s;
+    }
+    .symbol6 {
+      animation-delay: 1.25s;
+    }
+
+    @keyframes rotate {
+      0% {
+        transform: rotate(0deg);
+      }
+      50% {
+        transform: rotate(360deg);
+      }
+      100% {
+        transform: rotate(720deg);
+      }
+    }
+
+    @keyframes scale {
+      0% {
+        transform: scale(1);
+        opacity: 1;
+        fill: #99ccff;
+      }
+      12.5% {
+        transform: scale(0.25);
+        opacity: 0.5;
+        fill: #0080ff;
+      }
+      25% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
   </style>
 </head>
 <body>
@@ -52,7 +121,22 @@
   <div class="background">
     <div class="wrapper">
       <div class="sixLogo">
-          <svg width="100%" height="100%" viewBox="0 0 142 142" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" style="fill-rule:evenodd;clip-rule:evenodd;"><g id="mark"><path id="Shape" d="M100.699,41.185c-7.049,-7.079 -16.393,-11.401 -26.345,-12.185l-21.809,21.844c-9.666,8.922 -11.62,23.473 -4.652,34.637c6.968,11.164 20.884,15.778 33.126,10.982c12.242,-4.795 19.341,-17.64 16.899,-30.577c-2.442,-12.937 -13.734,-22.299 -26.879,-22.287l-1.808,0l7.55,-7.561c16.032,2.679 28.157,15.989 29.358,32.224c1.201,16.235 -8.835,31.189 -24.297,36.205c-15.463,5.017 -32.346,-1.203 -40.877,-15.06c-8.531,-13.857 -6.499,-31.759 4.919,-43.345l16.178,-16.236c-18.754,4.091 -32.354,20.396 -33.035,39.609c-0.682,19.213 11.727,36.444 30.144,41.858c18.417,5.415 38.156,-2.366 47.949,-18.9c9.794,-16.533 7.151,-37.614 -6.421,-51.208l0,0Zm-29.66,9.15c9.828,-0.011 18.298,6.927 20.237,16.578c1.939,9.65 -3.192,19.329 -12.259,23.127c-9.067,3.798 -19.55,0.659 -25.047,-7.501c-5.497,-8.16 -4.48,-19.072 2.43,-26.072l0.84,-0.842c3.791,-3.416 8.716,-5.296 13.815,-5.274l-0.016,-0.016l0,0Z" style="fill:#fff;fill-rule:nonzero;"/></g></svg>
+        <div class="process-dialog-container">
+          <div class="symbol">
+            <svg viewBox="0 0 94.31 95.69">
+              <g data-name="Layer 2">
+                <g fill="#99ccff;" data-name="Layer 1">
+                  <path class="symbol1" d="M94.31 60.47V33.83L71.23 20.5 49.15 33.25l35.72 20.62v12.05l9.44-5.45z"/>
+                  <path class="symbol2" d="M81.67 13.32L58.59 0 35.51 13.32v25.49L71.23 18.2l10.44 6.02v-10.9z"/>
+                  <path class="symbol3" d="M34.51.69L11.44 14.02v26.65l22.07 12.74V12.17l10.44-6.03L34.51.69z"/>
+                  <path class="symbol4" d="M45.15 62.44L9.44 41.82V29.77L0 35.22v26.64l23.08 13.33 22.07-12.75z"/>
+                  <path class="symbol5" d="M23.08 77.5l-10.44-6.03v10.9l23.08 13.32 23.07-13.32V56.88L23.08 77.5z"/>
+                  <path class="symbol6" d="M50.36 89.55L59.79 95l23.08-13.33V55.02L60.79 42.28v41.24l-10.43 6.03z"/>
+                </g>
+              </g>
+            </svg>
+          </div>
+        </div>
       </div>
     </div>
   </div>
