Fix calendar icons https://www.wrike.com/open.htm?id=254782497

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon-180x180">
 
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Roboto:300,400,500,600" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Roboto:300,400,500,600" rel="stylesheet">
+  <link href="//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <style>
     app-root > .background {
