--- a/src/index.priority.html
+++ b/src/index.priority.html
@@ -10,8 +10,8 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/png" href="/assets/favicons/favicon-recursix.png">
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Roboto:300,400,500,600" rel="stylesheet">
-  <script src="https://cdn.auth0.com/js/lock/10.8/lock.min.js"></script>
+  <link href="//fonts.googleapis.com/css?family=Montserrat:300,400,500,600|Roboto:300,400,500,600" rel="stylesheet">
+  <link href="//stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <style>
     app-root > .background {
